refactor: replace collect(Collectors.toList()) with toList() in KitnetController